Updated the While.g4 grammar: - Organized the grammar definitions - Added the support for all comparison operators (">=", "<=", "<", ">", "=")